<resources>
    <string name="app_name">TotalApp</string>

<!--    Strings fragment login (TOP) -->
    <string name="log_ingresa">Ingresa a tu cuenta.</string>
    <string name="log_tex_user">Cuenta, Correo o Telefono</string>
    <string name="log_tex_pass">Contraseña</string>
    <string name="log_tex_repa">Olvide mi contraseña</string>
    <string name="log_tex_inse">Iniciar Sesion</string>
    <string name="log_tex_noco">No tienes contraseña?</string>
    <string name="log_tex_reaq">Registrate Aqui</string>
<!--    Strings fragment login (TOP) -->

</resources>